//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package example.testing.rpc;

option go_package = "github.com/dxos/kube/proto/def/example/testing/rpc";

message TestRpcRequest {
  string data = 1;
}

message TestRpcResponse {
  string data = 1;
}

message TestStreamRpcRequest {
  string data = 1;
  uint32 streamLoadInterval = 2;
  uint32 streamLoadChunkSize = 3;
}

message TestStreamRpcResponse {
  string data = 1;
  uint32 bytesSent = 2;
  uint32 bytesReceived = 3;
  uint32 sendErrors = 4;
  uint32 receiveErrors = 5;
  uint32 runningTime = 6;
}

service TestService {
  rpc TestCall (TestRpcRequest) returns (TestRpcResponse);
  rpc VoidCall (google.protobuf.Empty) returns (google.protobuf.Empty);
}

service TestStreamService {
  rpc TestCall (TestRpcRequest) returns (stream TestRpcResponse);
}

service TestServiceWithStreams {
  rpc RequestTestStream (TestStreamRpcRequest) returns (TestRpcResponse);
  rpc CloseTestStream (TestRpcRequest) returns (TestStreamRpcResponse);
}

message PingRequest {
  int32 nonce = 1;
}

message PingReponse {
  int32 nonce = 1;
}

service PingService {
  rpc Ping (PingRequest) returns (PingReponse);
}

message MessageWithAny {
  google.protobuf.Any payload = 1;
}

service TestAnyService {
  rpc TestCall (MessageWithAny) returns (MessageWithAny);
}